# fastfindr

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ff.py  main.cpp  model.onnx  requirements.txt  sbert_CMakeLists.txt  sbert_example.cpp  setup.sh
client/: README.md  __init__.py  sdk.py
converter/: exporter.py  requirements.txt
db/: queries.hx  schema.hx
examples/: file_indexing.py
examples/data/countries/: america.txt  canada.txt  china.txt  england.txt  france.txt  japan.txt  mongolia.txt  portugal.txt  spain.txt  sweden.txt
include/: embedding_loader.h  model.h  tokenizer.h  util.h  vector_search.h
server/: CMakeLists.txt  README.md  setup.sh
server/include/: inference.h  server.h  storage.h  vector_search.h
server/src/: inference.cpp  server.cpp  storage.cpp  vector_search.cpp
src/: embedding_loader.cpp  main.cpp  model.cpp  tokenizer.cpp  vector_search.cpp
utils/: README.md  benchmark.py  model_exporter.py
